# python-swiftclient

./: .coveragerc  .functests  .gitignore  .gitreview  .mailmap  .stestr.conf  .testr.conf  .unittests  .zuul.yaml  AUTHORS  CHANGELOG  CONTRIBUTING.md  CONTRIBUTING.rst  ChangeLog  MANIFEST.in  README.rst  bindep.txt  lower-constraints.txt  openstack-common.conf  other-requirements.txt  pyproject.toml  requirements.txt  run_tests.sh  setup.cfg  setup.py  test-requirements.txt  tox.ini
doc/: Makefile  requirements.txt
doc/manpages/: swift.1
doc/source/: apis.rst  cli.rst  client-api.rst  conf.py  index.rst  introduction.rst  sdk.rst  service-api.rst  swiftclient.rst
doc/source/cli/: index.rst
doc/source/contributor/: contributing.rst
examples/: capabilities.py  copy.py  delete.py  download.py  list.py  post.py  retention.py  stat.py  upload.py
openstack/: install-swift.sh
playbooks/swiftclient-dsvm-functional/: run.yaml
playbooks/swiftclient-dsvm-functional-identity-v3-only/: run.yaml
releasenotes/notes/: 310-notes-03040158a8683dd8.yaml  320_notes-bb367dba1053d34c.yaml  340_notes-1777780bbfdb4d96.yaml  350_notes-ad0ae19704b2eb88.yaml  360_notes-1ec385df13a3a735.yaml  361_notes-13a2ad3a7cfea5e3.yaml  361_notes-59e020e68bcdd709.yaml  3_8_0_release-bd867fbdb8c895d3.yaml  3_8_1_release-cb5648c3ae69bde1.yaml  3_9_0_release-3c293d277f14ec22.yaml  3_9_1_release-ef242d7bedf3aa8b.yaml  4_10_0_release-8370f0dcdb8a0e11.yaml  4_3_0_release.yaml  4_4_0_release-d731bab5982c160b.yaml  4_5_0_release-b315d25b889293f2.yaml  4_6_0_release-92e466eb55b80225.yaml  4_8_0_release-41ba0852981191c3.yaml  4_9_0_release-b26426108163280d.yaml
releasenotes/source/: conf.py  index.rst  ocata.rst  pike.rst
swiftclient/: __init__.py  authv1.py  client.py  command_helpers.py  exceptions.py  multithreading.py  requests_compat.py  service.py  shell.py  utils.py  version.py
swiftclient/openstack/common/: setup.py  version.py
test/: sample.conf
test/functional/: __init__.py  test_openstackclient.py  test_openstacksdk.py  test_swiftclient.py
test/unit/: test_authv1.py  test_command_helpers.py  test_multithreading.py  test_service.py  test_shell.py  test_swiftclient.py  test_utils.py  utils.py
tests/: sample.conf  test_client.py  test_command_helpers.py  test_multithreading.py  test_shell.py  test_swiftclient.py  test_utils.py  utils.py
tests/functional/: test_swiftclient.py
tests/unit/: test_authv1.py  test_command_helpers.py  test_multithreading.py  test_service.py  test_shell.py  test_swiftclient.py  test_utils.py  utils.py
tools/: pip-requires  swift.bash_completion  test-requires  tox_install.sh
