[metadata]
name = python-swiftclient
summary = OpenStack Object Storage API Client Library
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/python-swiftclient/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    swiftclient
scripts =
    bin/swift
data_files =
    share/man/man1 = doc/manpages/swift.1

[extras]
keystone =
    python-keystoneclient>=0.7.0

[entry_points]
console_scripts =
    swift = swiftclient.shell:main

keystoneauth1.plugin =
    v1password = swiftclient.authv1:PasswordLoader

[bdist_wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
