[metadata]
name = python-swiftclient
summary = OpenStack Object Storage API Client Library
description_file =
    README.rst
long_description_content_type = text/x-rst
license = Apache License, Version 2.0
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/python-swiftclient/latest/
project_urls =
    Bug Tracker = https://bugs.launchpad.net/python-swiftclient
    Documentation = https://docs.openstack.org/python-swiftclient/latest/
    Release Notes = https://opendev.org/openstack/python-swiftclient/src/branch/master/ChangeLog
    Source Code = https://opendev.org/openstack/python-swiftclient
python_requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only

[files]
packages =
    swiftclient
scripts =
    bin/swift
data_files =
    share/man/man1 = doc/manpages/swift.1

[extras]
keystone =
    python-keystoneclient>=0.7.0

[entry_points]
console_scripts =
    swift = swiftclient.shell:main

keystoneauth1.plugin =
    v1password = swiftclient.authv1:PasswordLoader

[pbr]
skip_authors = True
skip_changelog = True
